[workspace]
members = [
    "genesis-core",
    "jgenesis-cli",
    "jgenesis-common",
    "jgenesis-gui",
    "jgenesis-native-driver",
    "jgenesis-proc-macros",
    "jgenesis-renderer",
    "jgenesis-web",
    "m68000-emu",
    "m68000-test-runner",
    "segacd-core",
    "smsgg-core",
    "snes-coprocessors",
    "snes-core",
    "spc700-emu",
    "spc700-test-runner",
    "wdc65816-emu",
    "wdc65816-test-runner",
    "z80-emu",
    "z80-test-runner",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
arrayvec = "0.7"
base64 = "0.21"
bincode = "2.0.0-rc.3"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }
crc = "3"
env_logger = "0.10"
flate2 = "1"
log = "0.4"
pollster = "0.3"
rand = "0.8"
raw-window-handle = "0.5"
regex = "1"
rfd = "0.12"
sdl2 = { version = "0.36", features = ["raw-window-handle"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
test-log = "0.2"
thiserror = "1"
toml = "0.8"
windows = "0.52"
wgpu = "0.18"

[profile.dev]

[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[profile.profiling-lto]
inherits = "profiling"
lto = true

[workspace.lints.rust]
rust_2018_idioms = "warn"

[workspace.lints.clippy]
# Warn broadly on all/pedantic, allowing the broad pedantic warn to be overridden
all = "warn"
pedantic = { level = "warn", priority = -1 }

# Warn on a small selection of restriction lints
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
try_err = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
verbose_file_reads = "warn"

# Allow pedantic lints that have a high false positive rate or that I disagree with
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
if_not_else = "allow"
inline_always = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
single_match_else = "allow"
stable_sort_primitive = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
unreadable_literal = "allow"
verbose_bit_mask = "allow"
