[workspace]
members = [
    "common/*",
    "cpu/*",
    "backend/*",
    "frontend/*",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1"
arrayvec = "0.7"
base64 = "0.22"
bincode = "2.0.0-rc.3"
bytemuck = { version = "1", features = ["derive"] }
cfg-if = "1"
chd = "0.3"
clap = { version = "4", features = ["derive"] }
console_error_panic_hook = "0.1"
console_log = "1"
crc = "3"
directories = "5"
eframe = "0.29"
egui = "0.29"
egui_extras = "0.29"
egui-wgpu = "0.29"
env_logger = "0.11"
flate2 = "1"
getrandom = "0.2"
glyphon = "0.6"
js-sys = "0.3"
log = "0.4"
pollster = "0.4"
rand = "0.8"
raw-window-handle = "0.6"
regex = "1"
rfd = "0.15"
rustc-hash = "2"
sdl2 = { version = "0.37", features = ["raw-window-handle"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sevenz-rust = "0.6"
test-log = "0.2"
thiserror = "2"
time = "0.3"
toml = "0.8"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-time = "1"
windows = "0.58"
winit = "0.30"
wgpu = "22"
xrandr = "0.2"
zip = "2"

[profile.dev.build-override]
opt-level = 1

[profile.dev-fast]
# dev profile with a few adjustments for faster incremental compile times
inherits = "dev"
# disable debuginfo
debug = false
strip = "debuginfo"
# set opt-level=1 because most of the emulators are unusably slow without optimizations
opt-level = 1

[profile.dev-fast.build-override]
# build proc-macro crates with full optimizations
opt-level = 3

[profile.release]
incremental = true

[profile.release.build-override]
opt-level = 1

[profile.release-lto]
inherits = "release"
incremental = false
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.profiling]
inherits = "release"
debug = true

[profile.profiling-lto]
inherits = "profiling"
lto = true

[workspace.lints.rust]
rust_2018_idioms = "warn"

[workspace.lints.clippy]
# Warn broadly on all/pedantic, allowing the broad warns to be overridden
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Warn on a small selection of restriction lints
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
mutex_atomic = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
try_err = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
verbose_file_reads = "warn"

# Allow pedantic lints that have a high false positive rate or that I disagree with
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
enum_glob_use = "allow"
if_not_else = "allow"
inline_always = "allow"
manual_string_new = "allow"
module_name_repetitions = "allow"
needless_pass_by_value = "allow"
similar_names = "allow"
single_match_else = "allow"
stable_sort_primitive = "allow"
struct_excessive_bools = "allow"
struct_field_names = "allow"
too_many_lines = "allow"
unchecked_duration_subtraction = "allow"
unreadable_literal = "allow"
verbose_bit_mask = "allow"
