[package]
name = "genesis-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]

[dependencies]
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }
jgenesis-traits = { path = "../jgenesis-traits", features = ["bincode"] }
m68000-emu = { path = "../m68000-emu", features = ["bincode"] }
smsgg-core = { path = "../smsgg-core" }
z80-emu = { path = "../z80-emu", features = ["bincode"] }

bincode = "2.0.0-rc.3"
log = "0.4"
regex = "1"
serde = { workspace = true, optional = true }
thiserror = "1"