[package]
name = "genesis-core"
version = "0.5.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]

[dependencies]
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }
jgenesis-common = { path = "../jgenesis-common" }
m68000-emu = { path = "../m68000-emu", features = ["bincode"] }
smsgg-core = { path = "../smsgg-core" }
z80-emu = { path = "../z80-emu", features = ["bincode"] }

bincode = { workspace = true }
crc = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
test-log = { workspace = true }

[lints]
workspace = true
