[package]
name = "jgenesis-cli"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genesis-core = { path = "../genesis-core" }
jgenesis-native-driver = { path = "../jgenesis-native-driver" }
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }
jgenesis-renderer = { path = "../jgenesis-renderer" }
jgenesis-traits = { path = "../jgenesis-traits" }
smsgg-core = { path = "../smsgg-core" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
