[package]
name = "jgenesis-cli"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genesis-core = { path = "../genesis-core" }
jgenesis-native-driver = { path = "../jgenesis-native-driver" }
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }
jgenesis-renderer = { path = "../jgenesis-renderer" }
jgenesis-traits = { path = "../jgenesis-traits" }
smsgg-core = { path = "../smsgg-core" }

anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
