[package]
name = "jgenesis-cli"
version = "0.5.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genesis-core = { path = "../genesis-core" }
smsgg-core = { path = "../smsgg-core" }
snes-core = { path = "../snes-core" }

jgenesis-native-driver = { path = "../jgenesis-native-driver" }
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }
jgenesis-renderer = { path = "../jgenesis-renderer" }
jgenesis-common = { path = "../jgenesis-common" }

anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true, features = ["release_max_level_info"] }

[lints]
workspace = true
