[package]
name = "jgenesis-common"
version = "0.5.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]

[dependencies]
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }

bincode = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }