[package]
name = "jgenesis-common"
version = "0.6.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]

[dependencies]
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }

bincode = { workspace = true, features = ["derive"] }
bytemuck = { workspace = true }
cfg-if = { workspace = true }
log = { workspace = true }
serde = { workspace = true, optional = true }
time = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { workspace = true }

[lints]
workspace = true
