[package]
name = "jgenesis-gui"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genesis-core = { path = "../genesis-core", features = ["serde"] }
jgenesis-native-driver = { path = "../jgenesis-native-driver" }
jgenesis-renderer = { path = "../jgenesis-renderer" }
jgenesis-traits = { path = "../jgenesis-traits", features = ["serde"] }
smsgg-core = { path = "../smsgg-core", features = ["serde"] }

anyhow = "1"
bincode = "2.0.0-rc.3"
eframe = "0.22"
egui = "0.22"
egui_extras = "0.22"
env_logger = "0.10"
log = "0.4"
rfd = "0.12"
serde = { workspace = true }
sdl2 = { workspace = true }
toml = "0.8"

[target.'cfg(target_os = "linux")'.dependencies]
xrandr = "0.2"