[package]
name = "jgenesis-gui"
version = "0.5.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genesis-core = { path = "../genesis-core", features = ["serde"] }
segacd-core = { path = "../segacd-core" }
smsgg-core = { path = "../smsgg-core", features = ["serde"] }
snes-core = { path = "../snes-core", features = ["serde"] }

jgenesis-native-driver = { path = "../jgenesis-native-driver" }
jgenesis-renderer = { path = "../jgenesis-renderer" }
jgenesis-common = { path = "../jgenesis-common", features = ["serde"] }

anyhow = { workspace = true }
bincode = { workspace = true }
eframe = "0.23"
egui = "0.23"
egui_extras = "0.23"
env_logger = { workspace = true }
log = { workspace = true, features = ["release_max_level_info"] }
regex = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
sdl2 = { workspace = true }
toml = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
xrandr = "0.2"

[lints]
workspace = true
