[package]
name = "jgenesis-native-driver"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }
jgenesis-renderer = { path = "../jgenesis-renderer" }
jgenesis-traits = { path = "../jgenesis-traits" }

genesis-core = { path = "../genesis-core" }
segacd-core = { path = "../segacd-core" }
smsgg-core = { path = "../smsgg-core" }
snes-core = { path = "../snes-core" }

bincode = { workspace = true }
bytemuck = { workspace = true }
log = { workspace = true }
pollster = { workspace = true }
serde = { workspace = true }
sdl2 = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = ["Win32_Media"] }