[package]
name = "jgenesis-proc-macros"
version = "0.5.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = "2"

[dev-dependencies]
jgenesis-common = { path = "../jgenesis-common" }

[lints]
workspace = true
