[package]
name = "jgenesis-renderer"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }
jgenesis-traits = { path = "../jgenesis-traits" }

bytemuck = { version = "1.13", features = ["derive"] }
log = "0.4"
raw-window-handle = "0.5"
serde = { workspace = true }
thiserror = "1"
wgpu = "0.17"