[package]
name = "jgenesis-renderer"
version = "0.5.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }
jgenesis-common = { path = "../jgenesis-common" }

bytemuck = { workspace = true }
log = { workspace = true }
raw-window-handle = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
wgpu = { workspace = true }

[lints]
workspace = true
