[package]
name = "jgenesis-traits"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bincode = ["dep:bincode"]

[dependencies]
bincode = { version = "2.0.0-rc.3", optional = true }
bytemuck = { version = "1", features = ["derive"] }