[package]
name = "jgenesis-traits"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]

[dependencies]
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }

bincode = { version = "2.0.0-rc.3" }
bytemuck = { version = "1", features = ["derive"] }
serde = { workspace = true, optional = true }
thiserror = "1"