[package]
name = "jgnes-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgnes-proc-macros = { path = "../jgnes-proc-macros" }

log = "0.4"
once_cell = "1"
rand = "0.8"
thiserror = "1.0"
tinyvec = "1.6"