[package]
name = "jgnes-core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgnes-proc-macros = { path = "../jgnes-proc-macros" }

bincode = "1"
log = "0.4"
once_cell = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0"
tinyvec = "1.6"