[package]
name = "jgsms-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genesis-core = { path = "../genesis-core" }
smsgg-core = { path = "../smsgg-core" }

anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"