[package]
name = "jgsms-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
z80-emu = { path = "../z80-emu", features = ["bincode"] }

bincode = { version = "2.0.0-rc.3", features = ["derive"] }
cpal = "0.15"
crc = "3"
log = "0.4"
minifb = "0.25"