[package]
name = "m68000-emu"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bincode = ["dep:bincode"]
memorybus = []

[dependencies]
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }
jgenesis-traits = { path = "../jgenesis-traits" }

bincode = { version = "2.0.0-rc.3", optional = true }
log = "0.4"