[package]
name = "m68000-test-runner"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m68000-emu = { path = "../m68000-emu", features = ["memorybus"] }

clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
flate2 = "1"
log = "0.4"
serde = { workspace = true }
serde_json = "1"
