[package]
name = "m68000-test-runner"
version = "0.5.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
m68000-emu = { path = "../m68000-emu", features = ["memorybus"] }

clap = { workspace = true }
env_logger = { workspace = true }
flate2 = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
