[package]
name = "segacd-core"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genesis-core = { path = "../genesis-core" }
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }
jgenesis-traits = { path = "../jgenesis-traits" }
m68000-emu = { path = "../m68000-emu" }
smsgg-core = { path = "../smsgg-core" }
z80-emu = { path = "../z80-emu" }

bincode = { version = "2.0.0-rc.3", features = ["derive"] }
crc = "3"
log = "0.4"
regex = "1.9"
thiserror = "1"