[package]
name = "segacd-core"
version = "0.5.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
genesis-core = { path = "../genesis-core" }
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }
jgenesis-common = { path = "../jgenesis-common" }
m68000-emu = { path = "../m68000-emu" }
smsgg-core = { path = "../smsgg-core" }
z80-emu = { path = "../z80-emu" }

bincode = { workspace = true }
crc = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
