[package]
name = "smsgg-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]

[dependencies]
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }
jgenesis-traits = { path = "../jgenesis-traits" }
z80-emu = { path = "../z80-emu", features = ["bincode"] }

bincode = { version = "2.0.0-rc.3", features = ["derive"] }
crc = "3"
log = "0.4"
serde = { workspace = true, optional = true }