[package]
name = "smsgg-core"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]

[dependencies]
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }
jgenesis-traits = { path = "../jgenesis-traits" }
z80-emu = { path = "../z80-emu", features = ["bincode"] }

bincode = { workspace = true }
crc = { workspace = true }
log = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }