[package]
name = "smsgg-core"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde"]

[dependencies]
jgenesis-proc-macros = { path = "../jgenesis-proc-macros" }
jgenesis-common = { path = "../jgenesis-common" }
z80-emu = { path = "../z80-emu", features = ["bincode"] }

bincode = { workspace = true }
crc = { workspace = true }
log = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }