[package]
name = "spc700-emu"
version = "0.5.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jgenesis-common = { path = "../jgenesis-common" }

bincode = { workspace = true }
log = { workspace = true }

[lints]
workspace = true
