[package]
name = "wdc65816-test-runner"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wdc65816-emu = { path = "../wdc65816-emu" }

clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
serde = { workspace = true }
serde_json = "1"