[package]
name = "z80-emu"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
bincode = ["dep:bincode"]

[dependencies]
jgenesis-traits = { path = "../jgenesis-traits" }

bincode = { version = "2.0.0-rc.3", optional = true, features = ["derive"] }
log = "0.4"

[dev-dependencies]
rand = "0.8"