[package]
name = "gb-core"
version = "0.7.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
clap = ["dep:clap"]
serde = ["dep:serde"]

[dependencies]
jgenesis-common = { path = "../../common/jgenesis-common" }
jgenesis-proc-macros = { path = "../../common/jgenesis-proc-macros" }

bincode = { workspace = true, features = ["derive"] }
clap = { workspace = true, optional = true }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }

[lints]
workspace = true
