[package]
name = "gb-core"
version = "0.7.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dsp = { path = "../../common/dsp" }
jgenesis-common = { path = "../../common/jgenesis-common" }
jgenesis-proc-macros = { path = "../../common/jgenesis-proc-macros" }

gb-config = { path = "../../config/gb-config" }

bincode = { workspace = true, features = ["derive"] }
log = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
